# agenty-python

./: .gitignore  LICENSE  README.md  docker-compose.yaml  error.txt  insomnia_collection.json  island_simulation_state.json  pyproject.toml  team-config.json
agent/: api.py  base_agent.py  llm.py  main.py  team_config_loader.py  tools_utils.py  util.py
agent/tools/: __init__.py  take_action_tool.py
docker/: evaluation_log.Dockerfile  scenario_server.Dockerfile
docs/: EVALUATION_GUIDE.md
eval-runs/multi-agent/: evaluation_log-1.jsonl  evaluation_log-2.jsonl  evaluation_log-3.jsonl  evaluation_log-partial.jsonl
eval-runs/single-agent/: evaluation_log-1.jsonl  evaluation_log-2.jsonl  evaluation_log-3.jsonl
evaluation_framework/: create_evaluation_dataframe.py  data_loading_cells.py  df.csv  eval_framework copy.ipynb  eval_framework.ipynb  evaluation_poc.ipynb  evaluators.py  load_real_data.py  logs_dataframe.csv  logs_dataframe_formatted.csv  logs_dataframe_formatted_run1.csv  logs_dataframe_formatted_run2.csv  prompt_templates.json  sim_log.pkl  sim_log_with_summaries.pkl
evaluation_framework/.ipynb_checkpoints/: eval_framework-checkpoint.ipynb
evaluation_framework/evaluation_logs/: evaluation_log.jsonl
evaluation_log/: client.py  evaluation_log.py  main.py  test_agent_logging.py
scenario_server/: __init__.py  api.py  classes.py  island_scripted_events.json  island_simulation_state.json  main.py  narration.py  scenario.py  scenario_loading_test.py  scenario_server.py  scenario_server_base.py  util.py
scripts/: deploy_agent_team.sh
(+12 files in other folders)
