[project]
name = "agenty-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic~=0.51.0",
    "fastapi~=0.104.0",
    "httpx~=0.28.1",
    "matplotlib>=3.10.3",
    "openai>=1.93.3",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests~=2.32.0",
    "seaborn>=0.13.2",
    "uvicorn~=0.34.2",
]
